{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 20,
  "lineage": "aa2b830f-bdd7-e362-5404-9257e22a61a7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:network-acl/acl-069dd747ad6bf3a7e",
            "default_network_acl_id": "acl-069dd747ad6bf3a7e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-069dd747ad6bf3a7e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "071338671019",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-00efa126d67882a14",
              "subnet-033e7d5d8ca48d845",
              "subnet-081d79cd73ea4c27d",
              "subnet-0f2d0e999fbcb6e39"
            ],
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:route-table/rtb-0241eee8be908197c",
            "default_route_table_id": "rtb-0241eee8be908197c",
            "id": "rtb-0241eee8be908197c",
            "owner_id": "071338671019",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:security-group/sg-08ea4b14f9c930a6e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08ea4b14f9c930a6e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "071338671019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02678329ecba277e4",
            "arn": "arn:aws:ec2:us-east-1:071338671019:elastic-ip/eipalloc-02678329ecba277e4",
            "domain": "vpc",
            "id": "eipalloc-02678329ecba277e4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-196-130-195.compute-1.amazonaws.com",
            "public_ip": "44.196.130.195",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:internet-gateway/igw-0f03e71a5fc3d7d23",
            "id": "igw-0f03e71a5fc3d7d23",
            "owner_id": "071338671019",
            "region": "us-east-1",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02678329ecba277e4",
            "association_id": "eipassoc-04540d06089192ec5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02949c150a2cb3760",
            "network_interface_id": "eni-06de3e977ff40fc9e",
            "private_ip": "10.0.1.198",
            "public_ip": "44.196.130.195",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-081d79cd73ea4c27d",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0326e15cbb5967ece1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02949c150a2cb3760",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0326e15cbb5967ece",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0326e15cbb5967ece"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f03e71a5fc3d7d23",
            "id": "r-rtb-02c0b0bc80ef20f631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02c0b0bc80ef20f63",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02c0b0bc80ef20f63"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:route-table/rtb-0326e15cbb5967ece",
            "id": "rtb-0326e15cbb5967ece",
            "owner_id": "071338671019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "id": "rtb-0326e15cbb5967ece",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:route-table/rtb-02c0b0bc80ef20f63",
            "id": "rtb-02c0b0bc80ef20f63",
            "owner_id": "071338671019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "id": "rtb-02c0b0bc80ef20f63",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0326d86c08eca65fd",
            "region": "us-east-1",
            "route_table_id": "rtb-0326e15cbb5967ece",
            "subnet_id": "subnet-0f2d0e999fbcb6e39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034a703b83cd2a256",
            "region": "us-east-1",
            "route_table_id": "rtb-0326e15cbb5967ece",
            "subnet_id": "subnet-033e7d5d8ca48d845"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d62ac3850618047",
            "region": "us-east-1",
            "route_table_id": "rtb-02c0b0bc80ef20f63",
            "subnet_id": "subnet-081d79cd73ea4c27d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d74f0a144c6b4518",
            "region": "us-east-1",
            "route_table_id": "rtb-02c0b0bc80ef20f63",
            "subnet_id": "subnet-00efa126d67882a14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:subnet/subnet-0f2d0e999fbcb6e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2d0e999fbcb6e39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071338671019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "id": "subnet-0f2d0e999fbcb6e39",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:subnet/subnet-033e7d5d8ca48d845",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033e7d5d8ca48d845",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071338671019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "id": "subnet-033e7d5d8ca48d845",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:subnet/subnet-081d79cd73ea4c27d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d79cd73ea4c27d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071338671019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "id": "subnet-081d79cd73ea4c27d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:subnet/subnet-00efa126d67882a14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00efa126d67882a14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071338671019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "vpc_id": "vpc-0c59d1198008299b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "id": "subnet-00efa126d67882a14",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071338671019:vpc/vpc-0c59d1198008299b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069dd747ad6bf3a7e",
            "default_route_table_id": "rtb-0241eee8be908197c",
            "default_security_group_id": "sg-08ea4b14f9c930a6e",
            "dhcp_options_id": "dopt-02bdacac2730700f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c59d1198008299b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0241eee8be908197c",
            "owner_id": "071338671019",
            "region": "us-east-1",
            "tags": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            },
            "tags_all": {
              "Name": "Janhvi_Singh_VPC",
              "Project": "Internship Assessment"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "071338671019",
            "id": "vpc-0c59d1198008299b6",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}